Avoid wrapping the territory number

--- a/web/js/prints/TerritoryCard.css
+++ b/web/js/prints/TerritoryCard.css
@@ -36,6 +36,7 @@
     justify-self: end;
     font-size: 30px;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 .minimap {
